@startuml
!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) #x

TABLE(PlayerProfile, "PlayerProfile") {
  PK(id): String
  name: String
  xp: Xp
}

TABLE(Challenge, "Challenge") {
  PK(id): String
  challenge_type: ChallengeType
  challenge_config: ChallengeConfig
  challenge_result: ChallengeResult
}

TABLE(GamePath, "GamePath") {
  PK(id): String
  name: String
  challenges: Vec<ChallengeConfig>
  map: Option<Map>
}

TABLE(GameState, "GameState") {
  game: Game
  challenge: Challenge
  current_game_path: usize
  current_challenge_index: usize
  current_task_index: usize
}

TABLE(Session, "Session") {
  PK(id): String
  FK(player_profile_id): String
  FK(game_state_id): String
}

PlayerProfile "1" -- "1" Session
GameState "1" -- "1" Session
GamePath "1" *-- "many" Challenge
Challenge "1" *-- "1" ChallengeConfig
Challenge "1" *-- "1" ChallengeResult
@enduml
